# cuda-gemm

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  make.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
benchmark/: bench_gemm.py  profile_kernel.py
csrc/: launchers.h  ops.cpp  ops.h
csrc/kernels/: 01_gemm_naive.cu  02_gemm_gmem_coalesce.cu  03_gemm_smem.cu  04_gemm_blocktiling_1d.cu  05_gemm_blocktiling_2d.cu  06_gemm_warptiling.cu  07_gemm_cutlass.cu  gemm_naive.cu  gemm_tiled.cu
docs/: nsight_compute_cli.md  repo-architecture.md
examples/: example_gemm.py
tests/: test_gemm.py
